syntax = "proto3";

package com.road.yishi.proto.campaign;

message AltarCampaignSkillMsg {
  int32 templateId = 1;
  int32 CDTimer = 2;
  int32 userId = 3;
  string nickName = 4;
  int32 consortiaId = 5;
}
